# cpp-research

./: README.md  ambiguity.cpp  bool_vector.cpp  cast_call_virtual_func.cpp  default_copy_constructer.cpp  diamond2.cpp  partial_assignments.cpp  pass_derived_by_value.cpp  pure_virtual_destructor.cpp  pure_virtual_func_in_constructor.cpp  reverse_iterator_to_iterator.cpp  string_cow.cpp  string_sso.cpp  string_test.cpp  virtual_func_in_constructor.cpp  virtual_func_size.cpp
auto_with_proxy/: CMakeLists.txt  auto_with_proxy.cpp
avoid_overload_universal_reference/: avoid_overload_universal_reference.cpp
copy_auto_ptr/: CMakeLists.txt  copy_auto_ptr.cpp
decltype_auto/: CMakeLists.txt  decltype_auto.cpp
enable_if_test/: CMakeLists.txt  README.md  enable_if_test.cpp
failure_of_prefer_forward/: failure_of_prefer_forward.cpp
move_and_forward/: CMakeLists.txt  move_and_forward.cpp
move_test/: CMakeLists.txt  README.md  move_test.cpp
parenthesis_and_braces_construct/: CMakeLists.txt  parenthesis_and_braces_construct.cpp
pimpl_idiom/: CMakeLists.txt  README.md  main.cpp  widget.cpp  widget.h
prefer_nullptr/: CMakeLists.txt  prefer_nullptr.cpp
universal_reference/: universal_reference.cpp
